trying to fix nav on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,6 +58,9 @@ article.nav {
     transition: ease all .5s;
     width: 100%;
   }
+  @media (max-width: 991.99px) {
+    height: 800px;
+  }
   section.blurb {
     background: linear-gradient(to top, $brand-color-dark, transparent);
     width: 100%;
@@ -174,12 +177,18 @@ article.content {
 }
 section.intro {
   height: 100vh;
+  @media (max-width: 991.99px) {
+    height: 700px;
+  }
   canvas.particles-box {
     background-color: $bg-grey;
     // width: 100%;
     // height: 100%;
     position: absolute;
     z-index: -1;
+    @media (max-width: 991.99px) {
+      height: 700px;
+    }
   }
   // Ensures there's a grey bg if canvas isn't ready yet
   div.bg-before-canvas {
@@ -188,6 +197,9 @@ section.intro {
     height: 100%;
     position: absolute;
     z-index: -2;
+    @media (max-width: 991.99px) {
+      height: 700px;
+    }
   }
   .text-body {
     position: absolute;
@@ -197,6 +209,9 @@ section.intro {
     display: flex;
     justify-content: center;
     align-items: center;
+    @media (max-width: 991.99px) {
+      height: 700px;
+    }
     .more-arrow {
       position: absolute;
       bottom: 4rem;
